<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/another_back">

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        tools:text="@string/test_city_title"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/test_date"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/tv_city"
        app:layout_constraintStart_toStartOf="@id/tv_city"
        android:layout_marginTop="4dp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_weather_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:srcCompat="@drawable/kinda_snowflake_light" />

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/test_temperature_value"
        android:textColor="@color/white"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/iv_weather_icon"
        app:layout_constraintEnd_toStartOf="@id/iv_weather_icon"
        app:layout_constraintBottom_toBottomOf="@id/iv_weather_icon"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tv_weather_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/test_weather_state"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/iv_weather_icon"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/iv_weather_icon"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tv_feels_like_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feels_like"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="@id/tv_feels_like"
        app:layout_constraintEnd_toStartOf="@id/tv_feels_like"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/tv_feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/test_feels_like_temp"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@id/tv_weather_state"
        app:layout_constraintTop_toBottomOf="@id/tv_weather_state"
        android:layout_marginTop="4dp"/>


    <TextView
        android:id="@+id/tv_pressure_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/tv_feels_like_title"
        app:layout_constraintBottom_toTopOf="@id/tv_humidity_title"
        app:layout_constraintStart_toStartOf="@id/tv_wind_direction_title"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="4dp"
        />

    <TextView
        android:id="@+id/tv_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/test_pressure_value"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@id/tv_pressure_title"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_pressure_title"/>

    <TextView
        android:id="@+id/tv_humidity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/tv_pressure_title"
        app:layout_constraintStart_toStartOf="@id/tv_wind_direction_title"
        app:layout_constraintBottom_toTopOf="@id/tv_wind_speed_title"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/test_humidity_value"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@id/tv_humidity_title"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_humidity_title"/>

    <TextView
        android:id="@+id/tv_wind_speed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/tv_humidity_title"
        app:layout_constraintStart_toStartOf="@id/tv_wind_direction_title"
        app:layout_constraintBottom_toTopOf="@id/tv_wind_direction_title"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/tv_wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/test_wind_speed"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@id/tv_wind_speed_title"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_wind_speed_title"/>

    <TextView
        android:id="@+id/tv_wind_direction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_direction"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_wind_speed_title"
        android:layout_marginStart="40dp"/>

    <TextView
        android:id="@+id/tv_wind_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/test_wind_direction"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@id/tv_wind_direction_title"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_wind_direction_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
